--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
   <small>
     Created 
-    by <a href="https://people.freshdesk.com/rishabh">Rishabh</a>
+    by <a href="https://in.linkedin.com/in/rishabhaditya">Rishabh</a>
   </small>
   <nav>
     
