--- a/app/views/file_upload/error.html.erb
+++ b/app/views/file_upload/error.html.erb
@@ -3,3 +3,14 @@
 <h2>There was an error saving the files retry again  </h2>
 <label for="Link">Want to try Again?</label> <br>
 <li><%= link_to "Upload",   upload_path %></li>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-90176354-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
