--- a/app/views/file_upload/show.html.erb
+++ b/app/views/file_upload/show.html.erb
@@ -18,7 +18,7 @@ Deployment Date: <%= @date %> <br>
   </thead>
 
   <tbody>
-  <% if !@error.blank? %>
+  <% if !@errors.blank? %>
     <% @errors.each do |error| %>
       <tr>
         <td><%= "#{error[0][1..-1]}" %></td>
